Update of request for administartor post in docs
